// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render with children: non-empty children 1`] = `
<header
  className="launchPanelHeader"
>
  <h1
    className="title"
  >
    test-title
  </h1>
  <div>
    <span>
      test children
    </span>
  </div>
  <div
    className="subtitle"
  />
</header>
`;

exports[`Header render with children: null children 1`] = `
<header
  className="launchPanelHeader"
>
  <h1
    className="title"
  >
    test-title
  </h1>
  <div />
  <div
    className="subtitle"
  />
</header>
`;

exports[`Header render with subtitle <test-sub-title> 1`] = `
<header
  className="launchPanelHeader"
>
  <h1
    className="title"
  >
    test-title
  </h1>
  <div />
  <div
    className="subtitle"
  >
    test-sub-title
  </div>
</header>
`;

exports[`Header render with subtitle <undefined> 1`] = `
<header
  className="launchPanelHeader"
>
  <h1
    className="title"
  >
    test-title
  </h1>
  <div />
  <div
    className="subtitle"
  />
</header>
`;
